--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -9,6 +9,8 @@ plugins {
 group 'org.infobip.mobile.messaging.api'
 version '1.0.0-SNAPSHOT'
 
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 
 jar {
     classifier = 'non_shaded'
@@ -38,7 +40,7 @@ idea {
             //scopes.PROVIDED.plus += project.configurations.provided.runtime
             //scopes.COMPILE.minus += project.configurations.provided.compile
             //scopes.RUNTIME.minus += project.configurations.provided.runtime
-        } catch(NullPointerException e) {
+        } catch (NullPointerException e) {
             println ":${project.name} ${e}"
         }
     }
