--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -33,6 +33,7 @@ android {
         versionCode 1
         versionName project.version
         testInstrumentationRunner 'org.infobip.mobile.messaging.service.CustomInstrumentationTestRunner'
+        setProperty("archivesBaseName", "${archivesBaseName}-$versionName")
     }
 
     lintOptions {
