--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -55,6 +55,11 @@ idea {
 }
 
 def repo = version.endsWith('SNAPSHOT') ? 'libs-snapshot-local' : 'libs-release-local'
+println ":${project.name} ${repo}"
+println ":${project.name} ${repo}"
+println ":${project.name} ${System.getProperty('artifactory.publish.contextUrl')}"
+println ":${project.name} ${System.getProperty('artifactory.publish.username')}"
+println ":${project.name} ${System.getProperty('artifactory.publish.password')}"
 
 artifactory {
     contextUrl = "${System.getProperty('artifactory.publish.contextUrl')}"
