--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -66,12 +66,12 @@ artifactory {
     println ":${project.name} ${clientConfig.publisher.username}"
     println ":${project.name} ${clientConfig.publisher.password}"
 
-    contextUrl = "${biuldInfo.getProperty('artifactory.publish.contextUrl')}"
+    contextUrl = "${artifactory_contextUrl)}"
     publish {
         repository {
             repoKey = repo
-            username = "${biuldInfo.getProperty('artifactory.publish.username')}"
-            password = "${biuldInfo.getProperty('artifactory.publish.password')}"
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
             maven = true
 
         }
@@ -79,8 +79,8 @@ artifactory {
     resolve {
         repository {
             repoKey = 'repo'
-            username = "${System.getProperty('artifactory.publish.username')}"
-            password = "${System.getProperty('artifactory.publish.password')}"
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
             maven = true
         }
     }
