--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -66,7 +66,7 @@ artifactory {
     println ":${project.name} ${clientConfig.publisher.username}"
     println ":${project.name} ${clientConfig.publisher.password}"
 
-    contextUrl = "${artifactory_contextUrl)}"
+    contextUrl = "${artifactory_contextUrl}"
     publish {
         repository {
             repoKey = repo
