MM-41 - Android SDK - publishing to Artifactory attempt 14

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ subprojects {
                 password = "${artifactoryPassword}"
                 maven = true
             }
+            defaults {
+                publishConfigs('archives')
+            }
         }
         resolve {
             repository {
