--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 
 plugins {
     id "com.jfrog.artifactory" version "4.0.0"
+//    id 'net.researchgate.release' version '2.3.4'
 }
 
 allprojects {
