MM-41 - missing apk fix attempt 3
ApplicationId -> ApplicationCode

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -71,7 +71,7 @@ android {
     }
 
     artifacts {
-        archives file("build/outputs/apk/infobip-mobile-messaging-android-demo-full-${version.contains('SNAPSHOT')?'dev':'release'}-${version}")
+        archives file("build/outputs/apk/infobip-mobile-messaging-android-demo-full-${version.contains('SNAPSHOT')?'dev':'release'}-${version}.apk")
     }
 
     productFlavors {
