MM-27 - release plugin config attempt 2

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ subprojects {
     }
 
     release {
+        useAutomaticVersion = true
         failOnCommitNeeded = true
         failOnPublishNeeded = true
         failOnSnapshotDependencies = true
