MM-27 - release plugin config attempt 5

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ subprojects {
     apply plugin: "com.jfrog.artifactory"
 
     def repo = version.endsWith('SNAPSHOT') ? 'libs-snapshot-local' : 'libs-release-local'
+    def artifactoryUrl = System.getenv('ARTIFACTORY_USERNAME') ? System.getenv('ARTIFACTORY_USERNAME') : "http://ci-server.infobip.local/artifactory"
     def artifactoryUsername = project.hasProperty('artifactoryUsername') ? project['artifactoryUsername'] : System.getenv('ARTIFACTORY_USERNAME')
     def artifactoryPassword = project.hasProperty('artifactoryPassword') ? project['artifactoryPassword'] : System.getenv('ARTIFACTORY_PASSWORD')
 
@@ -42,7 +43,7 @@ subprojects {
     artifactoryPublish.dependsOn(checkProperties)
 
     artifactory {
-        contextUrl = "http://ci-server.infobip.local/artifactory"
+        contextUrl = artifactoryUrl
         publish {
             repository {
                 repoKey = "${repo}"
