MM-27 - release plugin config attempt 7

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -43,11 +43,7 @@ android {
 
     signingConfigs {
         release {
-            def keystoreFileName = "${project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE')}"
-            if (!keystoreFileName || !new File(keystoreFileName).exists())
-                keystoreFileName = "/tmp/mobile-messaging-demo.keystore"
-
-            storeFile file("${keystoreFileName}")
+            storeFile file("${!project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE') || !new File(project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE')).exists()? project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE') : '/tmp/mobile-messaging-demo.keystore'}")
             storePassword "${project.hasProperty('signingKeystorePassword') ? project['signingKeystorePassword'] : System.getenv('KEYSTORE_PASSWORD')}"
             keyAlias "alias_name"
             keyPassword "${project.hasProperty('signingKeystorePassword') ? project['signingKeystorePassword'] : System.getenv('KEYSTORE_PASSWORD')}"
