--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -43,7 +43,11 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("${!project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE') || !new File(project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE')).exists()? project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE') : '/tmp/mobile-messaging-demo.keystore'}")
+            def keystore = project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE')
+            if(!keystore || !new File(keystore).exists()){
+                keystore = "/tmp/mobile-messaging-demo.keystore"
+            }
+            storeFile file("${keystore}")
             storePassword "${project.hasProperty('signingKeystorePassword') ? project['signingKeystorePassword'] : System.getenv('KEYSTORE_PASSWORD')}"
             keyAlias "alias_name"
             keyPassword "${project.hasProperty('signingKeystorePassword') ? project['signingKeystorePassword'] : System.getenv('KEYSTORE_PASSWORD')}"
