MM-27 - release plugin config attempt 11

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -24,15 +24,6 @@ def getStarDate() {
     return ("" + days + hours + minutes).toInteger()
 }
 
-private Object getKeystore() {
-//    def keystore = project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE')
-//    if (!keystore || !new File(keystore).exists()) {
-//        keystore = "/tmp/mobile-messaging-demo.keystore"
-//    }
-//    return keystore
-    return "/tmp/mobile-messaging-demo.keystore"
-}
-
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -52,7 +43,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("${getKeystore()}")
+            storeFile file("${project.hasProperty('signingKeystore') ? project['signingKeystore'] : System.getenv('KEYSTORE')}")
             storePassword "${project.hasProperty('signingKeystorePassword') ? project['signingKeystorePassword'] : System.getenv('KEYSTORE_PASSWORD')}"
             keyAlias "alias_name"
             keyPassword "${project.hasProperty('signingKeystorePassword') ? project['signingKeystorePassword'] : System.getenv('KEYSTORE_PASSWORD')}"
