--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-#Mon, 28 Mar 2016 17:22:03 +0000
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
@@ -18,3 +17,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 version=1.0.0-SNAPSHOT
+group=org.infobip.mobile.messaging.api
