--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -69,6 +69,21 @@ dependencies {
     testCompile group: 'com.nanohttpd', name: 'nanohttpd', version: '2.1.0'
 }
 
+task removeSnapshots << {
+    configurations.archives.artifacts.with { archives ->
+        def snapshots = []
+        archives.each {
+            if (it.file.toString().contains("SNAPSHOT")) {
+                snapshots.add(it)
+            }
+        }
+        println "Removing SNAPSHOT artifacts: ${snapshots}"
+        removeAll(snapshots)
+    }
+}
+
+bintrayUpload.dependsOn(removeSnapshots)
+
 bintray {
     publish = !version.endsWith('SNAPSHOT')
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
