MM-27 - publishing to BinTray attempt 4

--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -102,6 +102,22 @@ android.libraryVariants.all { variant ->
     }
 }
 
+task removeSnapshots << {
+    delete fileTree(dir: 'build', include: '**/*SNAPSHOT*.*')
+
+    def snapshots = project.configurations.archives.findResults {
+        if (it.file.exists()) {
+            return null
+        }
+        return it
+    }.unique();
+    for (def snapshot : snapshots) {
+        project.configurations.archives.remove(snapshot)
+    }
+
+    println "Remaining archives: ${project.configurations.archives}"
+}
+
 bintrayUpload.dependsOn(removeSnapshots)
 
 bintray {
