--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -69,26 +69,11 @@ dependencies {
     testCompile group: 'com.nanohttpd', name: 'nanohttpd', version: '2.1.0'
 }
 
-task removeSnapshots << {
-    delete fileTree(dir: 'build', include: '**/*SNAPSHOT*.*')
-
-    def releases = project.configurations.archives.findResults {
-        if (!it.file.exists()) {
-            return null
-        }
-        return it
-    }.unique();
-
-    project.configurations.releases = releases
-}
-
-bintrayUpload.dependsOn(removeSnapshots)
-
 bintray {
     publish = !version.endsWith('SNAPSHOT')
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    configurations = ['releases']
+    configurations = ['archives']
     pkg {
         repo = 'maven'
         name = 'infobip-mobile-messaging-api-java'
