MM-27 - publishing to BinTray attempt 9

--- a/build.gradle
+++ b/build.gradle
@@ -69,5 +69,5 @@ task clean(type: Delete) {
 }
 
 release {
-    buildTasks = ['clean', 'build']
+    buildTasks = ['clean', 'build', 'bintrayUpload']
 }
