--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -26,7 +26,7 @@ android {
         versionCode 1
         versionName project.version
         testInstrumentationRunner 'org.infobip.mobile.messaging.service.CustomInstrumentationTestRunner'
-        setProperty("archivesBaseName", "${archivesBaseName}-$versionName")
+//        setProperty("archivesBaseName", "${archivesBaseName}-$versionName")
     }
 
     lintOptions {
